wso2-is/is-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: is-route
  namespace: wso2-is
spec:
  parentRefs:
    - name: wso2-gateway
      namespace: envoy-gateway-system
      sectionName: https
  hostnames:
    - "wso2is.example.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
      - group: gateway.envoyproxy.io     # Change group from "" to Envoy's CRD group
        kind: Backend                    # Change kind from "Service" to "Backend"
        name: wso2-is-backend            # Target the Backend object we created in Step 1
        port: 9443
